# attestix

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.test  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  aws-test-userdata.sh  buildspec.yml  cli.py  config.py  errors.py  generate_logos.py  main.py  mkdocs.yml  pyproject.toml  requirements-api.txt  requirements-ci.txt  requirements.txt  server.json  simulate_users.py
.github/: FUNDING.yml  dependabot.yml  scorecard-pinned-deps.md
.github/workflows/: docs.yml  lint.yml  publish.yml  sbom.yml  scorecard.yml  security.yml  test.yml  website.yml
.specify/: integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
api/: __init__.py  deps.py  main.py
api/routers/: __init__.py  agent_cards.py  blockchain.py  compliance.py  credentials.py  delegation.py  did.py  identity.py  provenance.py  reputation.py
attestix/: __init__.py  cli.py  config.py  main.py
attestix/api/: deps.py  main.py
attestix/audit/: __init__.py  emitter.py  events.py  service_hook.py
attestix/auth/: __init__.py  crypto.py  pqc.py  ssrf.py  token_parser.py
attestix/blockchain/: __init__.py  abi.py  merkle.py
attestix/idempotency/: __init__.py  middleware.py  store.py
attestix/integrations/: __init__.py
attestix/portability/: __init__.py  bundle_reader.py  bundle_writer.py  importer.py
attestix/services/: __init__.py  agent_card_service.py  blockchain_service.py  cache.py  compliance_service.py  credential_service.py  delegation_service.py  did_service.py  identity_service.py  provenance_service.py  report_service.py  reputation_service.py
attestix/signing/: __init__.py  inprocess_signer.py
attestix/storage/: __init__.py  file_repository.py  memory_repository.py
attestix/tenancy/: __init__.py  context.py
attestix/tools/: __init__.py  agent_card_tools.py  blockchain_tools.py  compliance_tools.py  credential_tools.py  delegation_tools.py  did_tools.py  identity_tools.py  provenance_tools.py  reputation_tools.py
audit/: __init__.py  emitter.py  events.py  service_hook.py
auth/: __init__.py  crypto.py  ssrf.py  token_parser.py
blockchain/: __init__.py  abi.py  merkle.py
demo/: README.md
demo/presentation/: comparison-table.md  faq.md  one-pager.md  talking-points.md
demo/quick-start/: five_min_demo.py  five_min_mcp.md
demo/webapp/: app.py
docs/: CNAME  api-reference.md  architecture.md  changelog.md  concepts.md  configuration.md  contributing.md  eu-ai-act-compliance.md  examples.md  extensibility-v0.4.0.md  faq.md  getting-started.md  index.md  integration-guide.md  research.md  risk-classification.md  roadmap.md
docs/assets/: cf-analytics.js  custom.css
examples/: 01_basic_identity.py  02_full_compliance.py  03_delegation_chain.py  04_verifiable_credentials.py  05_audit_trail.py  quickstart.py
examples/nanda_agentfacts_demo/: README.md  demo.py  sample_agentfacts.json
idempotency/: __init__.py  middleware.py  store.py
integrations/examples/: crewai_compliance.py  crewai_real_integration.py  dify_compliance.py  google_adk_compliance.py  langchain_compliance.py  langchain_real_integration.py  openai_agents_compliance.py  openai_agents_real_integration.py  semantic_kernel_compliance.py  strands_compliance.py
paper/: attestix-paper.tex
services/: __init__.py  agent_card_service.py  blockchain_service.py  cache.py  compliance_service.py  credential_service.py  delegation_service.py  did_service.py  identity_service.py  provenance_service.py  report_service.py  reputation_service.py
signing/: __init__.py  inprocess_signer.py  signer.py
specs/001-v0.4.0-extensibility/: data-model.md  plan.md  spec.md  tasks.md
storage/: __init__.py  file_repository.py  memory_repository.py  repository.py
tenancy/: __init__.py  context.py
tests/: conftest.py  test_tools.py
tests/benchmarks/: test_mcp_conformance.py  test_performance.py  test_rfc8032_ed25519.py  test_ucan_conformance.py  test_w3c_did_conformance.py  test_w3c_vc_conformance.py
tests/cli/: test_export_command.py  test_import_command.py  test_json_flag.py
tests/contract/: __init__.py  test_repository_contract.py  test_signer_contract.py
tests/e2e/: test_advanced_personas.py  test_agent_developer.py  test_blockchain_anchor.py  test_enterprise_compliance.py  test_full_validation.py  test_multi_agent.py  test_user_personas.py
tests/install/: test_pip_install_smoke.py
tests/integration/: test_framework_integrations.py  test_grc_quickstart_audit_chain.py  test_idempotency.py  test_idempotency_middleware.py  test_idempotency_rest_replay.py  test_service_audit.py  test_tenant_isolation.py
tests/perf/: test_issuance_scales.py
tests/portability/: test_bundle_reader.py  test_export_import_roundtrip.py  test_importer.py
tests/release/: __init__.py  test_api_extra_install.py  test_wheel_includes_integrations.py
tests/unit/: test_agent_card.py  test_audit_events.py  test_audit_fixes_2026_06_16.py  test_blockchain.py  test_compliance.py  test_crypto.py  test_delegation.py  test_did.py  test_identity.py  test_list_filters.py  test_merkle.py  test_org_report.py  test_pqc.py  test_provenance.py  test_report.py  test_reputation.py  test_security_hardening.py  test_signer_parity.py  test_ssrf.py  test_vc_service.py
tools/: __init__.py  agent_card_tools.py  blockchain_tools.py  compliance_tools.py  credential_tools.py  delegation_tools.py  did_tools.py  identity_tools.py  provenance_tools.py  reputation_tools.py
website/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  source.config.ts
website/content/: eu-ai-act-countdown.mdx  getting-started-5-minutes.mdx  one-signature-six-languages.mdx  research-paper.mdx  v0-3-0-ships-real-framework-integrations.mdx  why-attestation.mdx
website/public/: _headers  demo.cast.README.md  demo.tape  llms.txt
website/scripts/: generate-og.mjs  verify-samples.mjs
(+199 files in other folders)
