[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attestix"
version = "0.2.4"
description = "Attestix - Attestation Infrastructure for AI Agents. DID-based agent identity, W3C Verifiable Credentials, EU AI Act compliance, delegation chains, and reputation scoring. 47 MCP tools across 9 modules."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "VIBETENSOR PRIVATE LIMITED", email = "hello@vibetensor.com"},
]
keywords = [
    "attestix",
    "ai-agents",
    "agent-identity",
    "attestation",
    "verifiable-credentials",
    "verifiable-presentations",
    "eu-ai-act",
    "mcp",
    "mcp-server",
    "did",
    "ucan",
    "compliance",
    "ed25519",
    "blockchain",
    "gdpr",
    "reputation",
    "w3c",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.8.0",
    "cryptography>=44.0.0",
    "PyJWT[crypto]>=2.9.0",
    "base58>=2.1.1",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "nest-asyncio>=1.6.0",
    "python-json-logger>=3.3.0",
    "filelock>=3.13.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
blockchain = ["web3>=7.0.0"]
reports = ["weasyprint>=62.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[project.urls]
Homepage = "https://github.com/VibeTensor/attestix"
Documentation = "https://attestix.io/docs"
Repository = "https://github.com/VibeTensor/attestix"
Issues = "https://github.com/VibeTensor/attestix/issues"

[project.scripts]
attestix-cli = "cli:cli"

[tool.setuptools]
# Include both flat modules (backward compatibility) and attestix namespace (new)
packages = [
    # Flat modules (legacy imports: from services.X import Y)
    "auth",
    "blockchain",
    "services",
    "tools",
    # REST API
    "api",
    "api.routers",
    # Namespace package (new imports: from attestix.services.X import Y)
    "attestix",
    "attestix.auth",
    "attestix.blockchain",
    "attestix.services",
    "attestix.tools",
]
py-modules = ["main", "cli", "config", "errors"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live_blockchain: requires funded Base Sepolia wallet (deselect with -m 'not live_blockchain')",
]

[tool.setuptools.package-data]
# Only ship Python source files, never JSON data
blockchain = ["*.py"]

[tool.setuptools.exclude-package-data]
# Runtime data files are generated on first use - never ship them
"*" = [
    "identities.json",
    "compliance.json",
    "credentials.json",
    "delegations.json",
    "reputation.json",
    "provenance.json",
    "anchors.json",
    "*.json.bak",
    "*.json.tmp",
    "*.json.lock",
    ".signing_key.json",
    ".keypairs.json",
    ".blockchain_config.json",
    "*.log",
]
