[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attestix"
version = "0.3.0"
description = "Attestix - Attestation Infrastructure for AI Agents. DID-based agent identity, W3C Verifiable Credentials, EU AI Act compliance, delegation chains, and reputation scoring. 47 MCP tools across 9 modules."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "VIBETENSOR PRIVATE LIMITED", email = "hello@vibetensor.com"},
]
keywords = [
    "attestix",
    "ai-agents",
    "agent-identity",
    "attestation",
    "verifiable-credentials",
    "verifiable-presentations",
    "eu-ai-act",
    "mcp",
    "mcp-server",
    "did",
    "ucan",
    "compliance",
    "ed25519",
    "blockchain",
    "gdpr",
    "reputation",
    "w3c",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.8.0",
    "cryptography>=44.0.0",
    "PyJWT[crypto]>=2.9.0",
    "base58>=2.1.1",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "nest-asyncio>=1.6.0",
    "python-json-logger>=3.3.0",
    "filelock>=3.13.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
blockchain = ["web3>=7.0.0"]
reports = ["weasyprint>=62.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22", "pytest-cov>=5.0"]
lint = ["ruff>=0.6.0", "mypy>=1.11"]
security = ["pip-audit>=2.7", "bandit>=1.7", "safety>=3.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pip-audit>=2.7",
    "bandit>=1.7",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/VibeTensor/attestix"
Documentation = "https://attestix.io/docs"
Repository = "https://github.com/VibeTensor/attestix"
Issues = "https://github.com/VibeTensor/attestix/issues"

[project.scripts]
attestix = "cli:cli"

[tool.setuptools]
# Include both flat modules (backward compatibility) and attestix namespace (new)
packages = [
    # Flat modules (legacy imports: from services.X import Y)
    "auth",
    "blockchain",
    "services",
    "tools",
    # REST API
    "api",
    "api.routers",
    # Namespace package (new imports: from attestix.services.X import Y)
    "attestix",
    "attestix.auth",
    "attestix.blockchain",
    "attestix.services",
    "attestix.tools",
]
py-modules = ["main", "cli", "config", "errors"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Disable the Pydantic logfire plugin by default. When CrewAI (or other deps)
# pull in an opentelemetry-sdk version that is incompatible with the installed
# logfire, the plugin raises ImportError at collection time and aborts the
# whole suite. We do not need logfire for our tests.
addopts = "-p no:logfire"
markers = [
    "live_blockchain: requires funded Base Sepolia wallet (deselect with -m 'not live_blockchain')",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "build",
    "dist",
    ".venv",
    "site",
    "magicuidesign-agent-template",
    "magicuidesign-devtool-template",
    "website",
    "attestix.egg-info",
]

[tool.ruff.lint]
# Keep initial rule set conservative so CI passes out of the box; expand later
# with `ruff check --fix` in a dedicated cleanup PR.
select = ["E", "F", "W"]
ignore = [
    "E501",  # line-length handled by formatter
    "E402",  # module level import not at top of file (dynamic path tweaks)
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E722",  # bare except (legacy code has some)
    "E741",  # ambiguous variable name
    "F401",  # unused imports (re-exports in __init__ files)
    "F403",  # star imports
    "F405",  # may be undefined from star imports
    "F541",  # f-string without placeholders
    "F811",  # redefinition
    "F841",  # local variable assigned but not used
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811", "E402", "E401"]
"examples/**" = ["F401", "E402"]
"demo/**" = ["F401", "E402", "E401"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
warn_redundant_casts = true
# Keep mypy permissive initially; tighten over time.
check_untyped_defs = false
disallow_untyped_defs = false
exclude = [
    "build/",
    "dist/",
    "site/",
    "website/",
    "magicuidesign-agent-template/",
    "magicuidesign-devtool-template/",
    "tests/",
    "examples/",
    "demo/",
    "paper/",
]

[tool.bandit]
exclude_dirs = [
    "tests",
    "build",
    "dist",
    "site",
    "website",
    "magicuidesign-agent-template",
    "magicuidesign-devtool-template",
    "examples",
    "demo",
    ".venv",
]
skips = ["B101", "B311", "B404", "B603", "B607"]

[tool.coverage.run]
source = ["services", "tools", "auth", "blockchain", "api"]
branch = true
omit = [
    "tests/*",
    "examples/*",
    "demo/*",
    "build/*",
    "dist/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.setuptools.package-data]
# Only ship Python source files, never JSON data
blockchain = ["*.py"]

[tool.setuptools.exclude-package-data]
# Runtime data files are generated on first use - never ship them
"*" = [
    "identities.json",
    "compliance.json",
    "credentials.json",
    "delegations.json",
    "reputation.json",
    "provenance.json",
    "anchors.json",
    "*.json.bak",
    "*.json.tmp",
    "*.json.lock",
    ".signing_key.json",
    ".keypairs.json",
    ".blockchain_config.json",
    "*.log",
]
